Fixed CFPB font icon vertical alignment

--- a/src/static/less/modules/filter.less
+++ b/src/static/less/modules/filter.less
@@ -47,7 +47,8 @@
     i {
       padding-right: 10px;
       font-size: 1em;
-      line-height: .75em;
+      position: relative;
+      top: -1px;
     }
 
   }
@@ -188,7 +189,8 @@
     vertical-align: top;
     i {
       font-size: 1em;
-      line-height: 1.75em;
+      position: relative;
+      top: 5px;
       display: block;
     }
   }
